# gpd_ros2

./: README.md
gpd_ros2/: CMakeLists.txt  package.xml
gpd_ros2/include/gpd_ros2/: grasp_detection_server.h  grasp_messages.h  grasp_plotter.h
gpd_ros2/src/gpd_ros2/: grasp_detection_server.cpp  grasp_messages.cpp  grasp_plotter.cpp
gpd_ros2_msgs/: CMakeLists.txt  package.xml
gpd_ros2_msgs/msg/: CloudIndexed.msg  CloudSamples.msg  GraspConfigList.msg  GraspParams.msg
gpd_ros2_msgs/srv/: DetectGrasps.srv
